[NEW] 자료 대폭 추가  - wordpress 예제 데모 시나리오 추가  - role 등 각종 예제 추가

--- a/examples/0.role/kubeconfig.conf
+++ b/examples/0.role/kubeconfig.conf
@@ -3,7 +3,7 @@ clusters:
 - cluster:
     insecure-skip-tls-verify: true
     certificate-authority-data:
-    server: https://192.168.56.81:6443
+    server: #(여기에 K8s 클러스터 접속 API 주소 - https://192.168.49.2:8443)
   name: local_vm_k8s-master
 contexts:
 - context:
@@ -16,4 +16,4 @@ preferences: {}
 users:
 - name: lovehyun-admin
   user:
-    token: (여기에 실제 토큰 입력할것)
+    token: #(여기에 실제 토큰 입력할것)
