--- a/examples/6.volume/pv.yaml
+++ b/examples/6.volume/pv.yaml
@@ -28,7 +28,7 @@ persistentVolumeReclaimPolicy: Delete
                             #- Retain : 볼륨 사용이 중지되도 유지함, PVC를 삭제해도 PV유지, 실제 디스크내용은 지워지지 않음
                             # (아래의 PV와 PVC의 LifeCycle 항목에서 자세히 설명함)
 hostPath:                 # hostPath:PV Type 을 설정하는 부분 hostname은 노드에 저장되는 실제 저장 공간 설정하는 방법.
-    path: /volumeK8s        #           해당 예제에서는 hostPath로 생성(로컬 디스크 사용)
+    path: /tmp/volumeK8s    #           해당 예제에서는 hostPath로 생성(로컬 디스크 사용)
                             #           hostpath이외에 상위 1.1 volume의 종류에 명시되어있는 
                             #           다양한 종류의 저장공간을 설정해서 사용할 수 있음
 
