[DEV] 예제들 전반적으로 개선 보완  - 각종 내용 오류 보완  - 일부 indent 오류 해결

--- a/examples/0.role/4.user-rbac.yaml
+++ b/examples/0.role/4.user-rbac.yaml
@@ -1,23 +1,23 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: read-role
+  name: readonly-role
   namespace: default
 rules:
-- apiGroups: [""]
+- apiGroups: [""]  # "" = Default (Core API Group)
   resources: ["pods"]
   verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: read-rolebinding
+  name: readonly-user-readonly-role-binding
   namespace: default
 subjects:
 - kind: ServiceAccount
-  name: readuser
-  apiGroup: "" # Core API Group
+  name: readonly-user
+  apiGroup: ""  # Core API Group
 roleRef:
   kind: Role
-  name: read-role
+  name: readonly-role
   apiGroup: rbac.authorization.k8s.io
