--- a/examples/0.role/kubeconfig.conf
+++ b/examples/0.role/kubeconfig.conf
@@ -1,19 +1,22 @@
+# 서비스 계정의 토큰 인증방식으로 로그인 할 파일
 apiVersion: v1
 clusters:
 - cluster:
     insecure-skip-tls-verify: true
     certificate-authority-data:
-    server: #(여기에 K8s 클러스터 접속 API 주소 - https://192.168.49.2:8443)
-  name: local_vm_k8s-master
+    server:  # K8s 클러스터 접속 API 주소 - https://192.168.49.2:8443
+  name: minikube  # 또는 local_vm_k8s-master
+
 contexts:
 - context:
-    cluster: local_vm_k8s-master
-    user: lovehyun-admin
-  name: lovehyun-admin@local_vm_k8s-master
-current-context: lovehyun-admin@local_vm_k8s-master
+    cluster: minikube  # local_vm_k8s-master
+    user: lovehyun-admin  # 내가 만든 계정
+  name: lovehyun-admin@minikube 
+
+current-context: lovehyun-admin@minikube
 kind: Config
 preferences: {}
 users:
 - name: lovehyun-admin
   user:
-    token: #(여기에 실제 토큰 입력할것)
+    token:  # 여기에 실제 토큰 입력할것
