--- a/examples/9.network_policy/pod_mysql.yaml
+++ b/examples/9.network_policy/pod_mysql.yaml
@@ -10,7 +10,6 @@ spec:
     image: mysql:5.6
     env:
     - name: MYSQL_ROOT_PASSWORD
-      value: qwe123
+      value: (******)
     ports:
     - containerPort: 3306
-
