--- a/examples/3.svc/svc_tomcat1.yaml
+++ b/examples/3.svc/svc_tomcat1.yaml
@@ -10,6 +10,6 @@ spec:
   - name: my-nodeport-tomcat
     port: 8888    # 서비스 자신의 포트
     targetPort: 8080    # pod 내 컨테이너 포트
-    nodePort: 30001
+    nodePort: 30001    # 외부(노드) 포트 - 생략시 자동 할당
   selector:
     app: tomcat8
