--- a/examples/7.configmap/deployment.yaml
+++ b/examples/7.configmap/deployment.yaml
@@ -21,31 +21,12 @@ spec:
         - containerPort: 8080
         env:                         # env : 항목을 추가 해서 configmap 설정을 적용함
         - name: VERSION_TEST         # - name : 해당 Pod 에 적용될 환경변수 이름 
-                                     #          (만들어진 Pod 의 환경변수 조회 시 해당 이름이 있음)
-          valueFrom:                 # valueFrom : name에서 명시한 환경변수에 올 값을 설정함
-            configMapKeyRef:         # configMapKeyRef : 불러올 configMap과 key를 명시함
-              name: configmap-test   # name: 항목에 configMap 파일의 metadata:  name 이 들어가야함
-              key: K8S_VERSION_TEST  # key : 항목에 configMap 에 설정되어있는 data의 key 이름이 들어가야함
-        - name: K8S_CONFIGMAP        # - name 을 추가해서 다수의 환경변수를 설정할 수 있음
+          valueFrom:                 # valueFrom : name에서 명시한 환경변수에 적용할 값을 설정함
+            configMapKeyRef:         # configMapKeyRef : 불러올 configMap과 key를 선택
+              name: my-configmap     # name: 항목에 configMap 파일의 metadata: name 으로 선택
+              key: K8S_VERSION_TEST  # key: 항목에 configMap 에 설정되어있는 data의 key 이름 선택
+        - name: K8S_CONFIGMAP
           valueFrom:
             configMapKeyRef:
-              name: configmap-test
-              key: K8S_CONFIGMAP_TEST
-        - name: TEST
-          valueFrom:
-            configMapKeyRef:
-              name: configmap-test
-              key: K8S_TEST
- 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: my-service
-spec:
-  ports:
-  - port: 8080
-    targetPort: 8080
-  selector:
-    app: my-pod
-
+              name: my-configmap
+              key: K8S_CONFIGMAP_TEST 
