--- a/examples/7.configmap/deployment2.yaml
+++ b/examples/7.configmap/deployment2.yaml
@@ -19,27 +19,15 @@ spec:
         image: tomcat
         ports:
         - containerPort: 8080
-        volumeMounts:                # pod 에 mount 할 voloume을 설정함
-        - name: my-volume            # name이 my-volume인 volume을 mount 함.
+        volumeMounts:                # pod에 mount할 volume을 설정
+        - name: my-volume            # name이 my-volume인 volume을 mount
           mountPath: /ConfigMapTest  # mount할 경로 설정
       volumes:                       # volume 설정
       - name: my-volume              # volume name은 my-volume으로 함
         configMap:                   # volume에 ConfigMap 내용을 적용함
-          name: configmap-test       # name: 항목에 configMap 파일의 metadata:name 이 들어가야함
+          name: my-configmap         # name: 항목에 configMap 파일의 metadata:name 으로 선택
             items:                   # configMap 의 data 항목 중에 가져올 key를 선정함 
             - key: K8S_VERSION       # ConfigMap에 포함되어있는 Key
               path: K8S_VERSION      # Volume에 저장되는 파일이름
             - key: K8S_CONFIGMAP     # ConfigMap에 포함되어있는 Key
               path: K8S_CONFIGMAP    # Volume에 저장되는 파일이름
- 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: my-service
-spec:
-  ports:
-  - port: 8080
-    targetPort: 8080
-  selector:
-    app: my-pod
