[NEW] ingress 추가  - 인그레스 9번에 추가를 위해 기존 번호 모두 밀림

--- a/examples/demo2/mongo-express-service.yaml
+++ b/examples/demo2/mongo-express-service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: mongo-express
-  type: LoadBalancer
+  type: LoadBalancer  # Minikube 속에서는 결국 NodePort 와 동일함
   ports:
     - protocol: TCP
       port: 8081
