--- a/examples/1.pod/4.svc_mysql1.yaml
+++ b/examples/1.pod/4.svc_mysql1.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-svc-mysql
+  name: mysql-svc
   labels:
-    name: mysql5
+    app: mysql
 spec:
   type: ClusterIP
   ports:
