--- a/examples/2.replicaset/1.pods.yaml
+++ b/examples/2.replicaset/1.pods.yaml
@@ -8,7 +8,8 @@ spec:
   containers:
   - name: tomcat1
     image: tomcat
-
+    ports:
+    - containerPort: 8080
 ---
 apiVersion: v1
 kind: Pod
@@ -20,3 +21,5 @@ spec:
   containers:
   - name: tomcat2
     image: tomcat
+    ports:
+    - containerPort: 8080
