--- a/examples/3.svc/1.svc_mysql.yaml
+++ b/examples/3.svc/1.svc_mysql.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-mysql
+  name: mysql-svc
   labels:
-    name: service-mysql
+    name: mysql-svc
 spec:
   type: ClusterIP
   ports:
