--- a/examples/1.pod/6.nginx_tomcat.yaml
+++ b/examples/1.pod/6.nginx_tomcat.yaml
@@ -2,7 +2,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: my-nginx-tomcat-pods
-#  namespace: default
+  namespace: default
+  labels: 
+    app: my-app
 spec:
   containers:
   - name: my-nginx
@@ -13,3 +15,19 @@ spec:
     image: tomcat:jdk8-openjdk
     ports:
     - containerPort: 8080
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: my-nginx-svc
+# spec:
+#   type: NodePort
+#   ports:
+#   - name: web
+#     port: 8000
+#     targetPort: 80
+#   - name: tomcat
+#     port: 8001
+#     targetPort: 8080
+#   selector: 
+#     app: my-app
