--- a/examples/4.deployment/1.nginx-deployment.yaml
+++ b/examples/4.deployment/1.nginx-deployment.yaml
@@ -17,3 +17,15 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+spec:
+  type: LoadBalancer
+  selector:
+    app: nginx
+  ports:
+  - port: 80
+    name: http
